2000-10-21 23:02 GMT+2 Maurilio Longo <maurilio.longo@libero.it>
   * source/vm/hvm.c
      + Added an exception handler to be able to print a full harbour level stack trace upon
        abnormal program termination. This is OS/2 only.
   * source/rtl/gtos2/gtos2.c
      ! Little change on extended chars handling. Should make no difference.
   * include/hbdefs.h
      * changed to have OS/2 exception management defines included.

2000-10-20 00:30 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     * Forced uppercase and trim of restricted words.

2000-10-19 23:15 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     * Minor corrections.

2000-10-19 22:00 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     ! Fixed checking of stoppers for #XCOMMAND/#XTRANSLATE
       /* No longer known issues - I think it's ready for serious testing ;-) */

2000-10-19 19:40 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     ! Added logic to support multi-word stoppers needed by multi-word restricted list, like
      [ <lClick: ON CLICK, ON LEFT CLICK> <uLClick> ]
      /* Only 1 known error remains in processing of fwh/samples/fwbrow.prg */

   * include/hbclass.ch
     * Temprarily removed \ preceding < of not existing match markers, in nested # directive in result.
       /* Need to be readded once PP is fixed. */

2000-10-19 16:25 UTC-0400 David G. Holm <dholm@jsd-llc.com>
   * source/rtl/gtwin.gtwin.c
     ! Fixed bug in if test for discarding accent key strokes.

2000-10-19 11:00 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     ! Corrected bug with #else

2000-10-19 10:35 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     ! Corrected bug with nested #if...
     ! Corrected handling of EOF.
       /* 2 minor bugs in PP of fwh/samples/fwbrow found, and still pending. */

2000-10-19 01:10 UTC+0800 Ron Pinkas <ron@profit-master.com>